--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
     "format:check": "prettier --check",
     "format:write": "prettier --write",
-    "format:check:all": "yarn format:check .",
-    "format:write:all": "yarn format:write ."
+    "format:check:all": "npm run format:check .",
+    "format:write:all": "npm run format:write .",
+    "lint:check": "eslint",
+    "lint:fix": "eslint --fix",
+    "lint:check:all": "npm run lint:check .",
+    "lint:fix:all": "npm run lint:fix ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -28,8 +31,11 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
     "typescript": "~5.6.2",
