--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
+    "scaffdog": "^4.1.0",
     "storybook": "^8.4.7",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
